<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_weight="0"
        android:text="Filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_weight="0"
            android:text="@string/title_name_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleNamecompany"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />

        <EditText
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/nameCompany"
            android:hint="Enter Company Name"
            android:gravity="center_vertical|center" />

        <TextView
            android:layout_weight="0"
            android:text="@string/title_clasification_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleClassification"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center" />
        <Spinner
            android:layout_weight="0"
            android:id="@+id/classification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:prompt="@string/clas_prompt" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/searchCompany"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="SEARCH" />
            <Button
                android:id="@+id/filterCompany"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:backgroundTint="@color/red"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="clear filter" />
        </LinearLayout>

    </LinearLayout>
    <View android:id="@+id/separator"
        android:background="@color/black"
        android:layout_width = "fill_parent"
        android:layout_height="2dp"
        android:layout_centerVertical ="true"
        android:layout_alignParentTop="true"/>
    <ListView
        android:id="@+id/listBoards"
        android:layout_marginRight="5dp"
        android:dividerHeight="1dp"
        android:divider="@color/black"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="There aren't companies"/>

</LinearLayout>